--- a/Views/room.ejs
+++ b/Views/room.ejs
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=<h1>, initial-scale=1.0">
     <title>Document</title>
     <script>
-        // const ROOM_ID = "<%= roomId %>"
-        console.log("<%=roomId %>")
+        const ROOM_ID = "<%= roomId %>"
+        // console.log("<%=roomId %>")
     </script>
      <script src="/socket.io/socket.io.js" defer></script>
     <link rel="stylesheet" href="style.css">
